Revision history for Dist-Zilla-Plugin-GitHub

{{$NEXT}}

0.29      2012-12-22 14:02:45 Europe/Rome

 - Documentation fixes (no functional changes)
 - Use feature 'switch' instead of v5.10 (GH#16) (thanks, @brianphillips)

0.28      2012-11-30 12:46:33 Europe/Rome

 - Add a proper Changes file
 - Support user/repository format for 'repo' option (GH#15)

0.27      2012-08-20 11:17:23 Europe/Rome

 - Rebuild to update META.* repository links (no functional changes)

0.26      2012-08-05 16:05:45 Europe/Rome

 - Documentation fixes and improvements (no functional changes)
 - Use dist description when creating a new repo with the dzil gh command

0.25      2012-07-07 18:09:27 Europe/Rome

 - Fix dist name in the META.* homepage

0.24      2012-07-07 12:49:53 Europe/Rome

 - Rebuild to update META.* repository links (no functional changes)

0.23      2012-06-15 17:22:39 Europe/Rome

 - Bump versioned dependency on IO::Socket::SSL (GH#14)

0.22      2012-06-14 18:31:51 Europe/Rome

 - Add proper command and usage description to the dzil gh command
 - Various fixes related to forked repositories

0.21      2012-06-08 10:53:12 Europe/Rome

 - Add 'gh' command to use the plugins from the dzil command-line

0.20      2012-06-06 19:16:05 Europe/Rome

 - Fix GitHub::Meta plugin on perl 5.8 (GH#13) (thanks, @berekuk!)
 - Optionally support Config::Identity::GitHub for retrieving credentials

0.19      2012-04-16 19:11:47 Europe/Rome

 - Add meta_home option (GH#12)

0.18      2012-04-10 10:21:09 Europe/Rome

 - Fix default value for fork (GH#10) (thanks, @ioanrogers!)
 - Switch to GitHub API v3 and discontinue token-based login
 - Improve error handling

0.17      2012-03-29 11:40:51 Europe/Rome

 - Do nothing if login info is not available
 - Improve the error message when github.user is not set (GH#9)

0.16      2012-03-11 15:45:47 Europe/Rome

 - Add support for login with password and deprecate token login

0.15      2012-03-07 11:34:27 Europe/Rome
