@@ -2,6 +2,9 @@ Revision history for Dist-Zilla-Plugin-GitHub
 
 {{$NEXT}}
 
+ - Meta and Update now try to extract the GitHub repository name from the URL of
+   the remote pointing to the repository (whose name can be also configured).
+
 0.29      2012-12-22 14:02:45 Europe/Rome
 
  - Documentation fixes (no functional changes)
